@@ -1,5 +1,7 @@
 *SVN*
 
+* When Subversion#query_revision fails, give a more sane error [Jamis Buck]
+
 * Don't run the upgrade:revisions task on non-release servers [Jamis Buck]
 
 * Fix cap shell to properly recognize sudo prompt [Mark Imbriaco, barnaby, Jamis Buck]
